2003-09-03  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* api/dia-api.xml:
	* sources/Dia.metadata: Hidden the default ctor of 
	the PlacementTool.
	* dia/CanvasBox.custom:
	* dia/CanvasImage.custom:
	* dia/CanvasLine.custom: Added creation of PlacementTool for the item.
	* dia/PlacementTool.custom: Removed creation of Box, Image and Line.
	* PROBLEMS: Some problems magically goes away.
	* sample/sample.cs: Updated to accomodate api changes.

2003-08-31  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* api/dia-api.xml:
	* sources/Dia.metadata: Hide DiaShapeItemInfo and
	DiaShapeViewInfo cause they are only used internally.
	* PROBLEMS: Updated info on GDestroyNotify

2003-08-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/Dia/CanvasItemForeachFunc:
	* doc/en/Dia/CanvasViewItemForeachFunc: Documented
	* doc/en/Dia/CanvasGroup.xml:
	* doc/en/Dia/CanvasViewItem.xml: Partially documented
	* TODO: Added
	* dia/makefile: Added compile options to suppres warnings about
	missing Equals and GetHashcode functions.

2003-08-25  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* CREDITS: Added Arjan Molenaar
	* doc/en/Dia.xml: Added
	* sources/makefile: Application of new patches added
	* doc/en/Dia/CanvasElementHandle.xml:
	* doc/en/Dia/CapStyle.xml:
	* doc/en/Dia/FillStyle.xml:
	* doc/en/Dia/JoinStyle.xml:
	* doc/en/Dia/ShapeType.xml:
	* doc/en/Dia/ShapeVisibility.xml
	* doc/en/Dia/Strength.xml: Documented.
	
2003-08-19  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* WISHLIST: Autoconf wish added.
	* glue/dia-canvas-line.c: Added HeadPos and TailPos set properties, as
	  a workaround for gtk# bug 47168.
	* dia/CanvasLine.custom: Added get/set property for HeadPos and TailPos
	* sources/Dia.metadata: Hide HeadPos and TailPos in CanvasLine
	* PROBLEMS: Updated with solutions
	* CREDITS: Added

2003-08-12  Martin Willemoes Hansen  <mwh@sysrq.dk>
	
	* WISHLIST: Added

2003-08-08  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* NEWS: Added