@@ -1,16 +1,0 @@
-// PlacementTool.Custom - customizations
-//
-// Author: Martin Willemoes Hansen <mwh@sysrq.dk>
-//
-// Copyright (C) 2003 Martin Willemoes Hansen
-//
-// This code is inserted after the automatically generated code.
-
-[DllImport("diacanvas2")]
-extern static IntPtr dia_placement_tool_new (uint object_type, IntPtr dummy);
-
-public PlacementTool()
-{
-	Raw = dia_placement_tool_new (CanvasLine.GType, IntPtr.Zero);
-}
-
